--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TelegramConcurs</string>
+    <string name="statistics">Statistics</string>
+    <string name="followers">Followers</string>
 </resources>
